<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/mainLL">

    <ImageView
        android:id="@+id/imageViewSheep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/sheep_black" />

    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonwrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrote" />

        <Button
            android:id="@+id/buttontraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/training" />

        <Button
            android:id="@+id/buttonallwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/show_all" />

        <Button
            android:id="@+id/buttonShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/shop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceTestLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/priceTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:layout_marginEnd="10dp"
            android:textSize="40sp"
            />


        <ImageView
            android:id="@+id/imageViewAppleTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/apple16" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shopTest"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/have_this_item"/>

    <LinearLayout
        android:id="@+id/shopTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btnBackTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="назад" />

        <Button
            android:id="@+id/btnExitTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/btnForwardTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="вперед"
            android:padding="15dp"/>

    </LinearLayout>

</RelativeLayout>