<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ChooseLevelActivity"
    android:id="@+id/mainLL">

    <ImageView
        android:id="@+id/imageViewSheep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/sheep_black" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/training_size"
            android:textSize="24sp"
            android:text="@string/level1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/training_size"
            android:textSize="24sp"
            android:text="@string/level2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/training_size"
            android:textSize="24sp"
            android:text="@string/level3"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/training_size"
            android:textSize="24sp"
            android:text="@string/level3" />
    </LinearLayout>

</RelativeLayout>