<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AfterLevelActivity"
    android:id="@+id/mainLL">

    <ImageView
        android:id="@+id/imageViewSheep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/sheep_black" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMainNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="0"
                android:layout_marginRight="10dp"
                android:textColor="#000"
                android:textSize="45sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/apple46" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="150dp"
            android:textSize="25sp"
            android:text="TextView" />


        <Button
            android:id="@+id/buttonReturn_else"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/return_level" />

        <Button
            android:id="@+id/buttonChoose_another_words"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/choose_another_words" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/mainActivity_level" />

    </LinearLayout>

</RelativeLayout>